# dynamic-memory-chunk

./: .gitignore  README.md  pyproject.toml
DMC/: __init__.py
dmc/: _cli.py
dmc-registry/: Packages.json
source-code/amcx/: __init__.py  amcx.json  compression.py  exceptions.py  format.py  mirror.py  reader.py  smart.py  writer.py
source-code/dmc_agent_format/: Dmc-agent-pkg.json
